--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,25 +1,30 @@
 ---
 type: page
 title: About
-date: 2021-03-19
+date: 2023-04-04
 ---
 
-# Your Name
+import Image from 'next/image'
 
-Hey, I'm a Senior Software Engineer at Company. I enjoy working with Next.js and crafting beautiful front-end experiences.
+<Image
+  src="/images/unies.png"
+  alt="Photo"
+  width={200}
+  height={200}
+  priority
+  className="next-image"
+/>
 
-This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). It allows you to write Markdown and focus on the _content_ of your portfolio.
+## Unies Ananda Raja
 
-[**Deploy your own**](https://vercel.com/new/git/external?repository-url=https://github.com/vercel/next.js/tree/canary/examples/blog&project-name=portfolio&repository-name=portfolio) in a few minutes.
+Currently: Aquaculture Project Manager @ Alune Aqua
 
----
+Multidisciplinary professional with experience in the intersection of development and environmental sustainability. 
 
-<div>
-  Twitter [@yourname](https://twitter.com/yourname)
-  <br />
-  GitHub [@yourname](https://github.com/yourname)
-  <br />
-  Instagram [@yourname](https://instagram.com/yourname)
-  <br />
-  Email your@name.com
-</div>
+Interested in developing AI-based apps for everyone.
+
+Reach out to me: 
+
+- Email uanandaraja@gmail.com
+- Twitter [@nizzyhussle](https://twitter.com/nizzyhussle)
+- [LinkedIn](https://www.linkedin.com/in/unies-ananda-raja-55b01013b/)
